# anvildb

./: .gitattributes  .gitignore  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  LICENCE  README.md
.github/workflows/: miri.yml  release.yml  split.yml  tests.yml
benchmarks/: benchmark.php
core/: Cargo.toml
core/src/: buffer.rs  engine.rs  error.rs  ffi.rs
core/src/cache/: lru_cache.rs
core/src/collection/: collection.rs
core/src/index/: hash_index.rs  mod.rs  range_index.rs
core/src/query/: engine.rs
core/src/storage/: codec.rs  file_storage.rs  metadata.rs  mod.rs
core/src/validation/: schema.rs
core/tests/: integration_test.rs
docs/: api-reference.md  architecture.md  c-api.md  ci-cd.md  development.md  error-codes.md  index.md  testing.md  wrapper-development.md
rust/: Cargo.toml
rust/src/: engine.rs  error.rs  ffi.rs  lib.rs
rust/src/collection/: collection.rs  manager.rs  mod.rs
rust/src/index/: hash_index.rs  mod.rs  unique_index.rs
rust/src/query/: builder.rs  engine.rs  mod.rs
rust/src/storage/: file_lock.rs  file_storage.rs  mod.rs
rust/tests/: integration_test.rs
scripts/: test_manual.php  test_manual_2.php
src/: AnvilDb.php
src/Collection/: Collection.php
src/Exception/: AnvilDbException.php  FFIException.php
src/FFI/: Bridge.php  anvildb.h
src/Query/: QueryBuilder.php
