[package]
name = "anvildb-core"
version = "0.4.0"
edition = "2021"
description = "Core engine for AnvilDB — high-performance JSON file-based storage"

[lib]
name = "anvildb"
crate-type = ["cdylib", "rlib"]

[features]
default = []
debug-logs = ["env_logger"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = { version = "0.11", optional = true }
uuid = { version = ">=1, <1.12", features = ["v4"] }
getrandom = ">=0.2, <0.3"
miniz_oxide = "0.8"
aes-gcm = "0.10"

