[package]
name = "anvildb-core"
version = "0.3.0"
edition = "2021"
description = "Core engine for AnvilDB — high-performance JSON file-based storage"

[lib]
name = "anvildb"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = ">=1, <1.12", features = ["v4"] }
getrandom = ">=0.2, <0.3"
miniz_oxide = "0.8"
aes-gcm = "0.10"

[profile.release]
lto = true
strip = true
opt-level = 3
